Added similarity to search for plasmids

--- a/apps/plasmids/templates/plasmids/plasmid_detail.html
+++ b/apps/plasmids/templates/plasmids/plasmid_detail.html
@@ -220,7 +220,7 @@
         Annotations
     </h2><br>
 
-    <div class="card">
+    <div class="card-content">
         <table class="plasmid-table with-columns">
             <thead>
                 <tr>
@@ -257,13 +257,13 @@
                             -
                         {% endif %}
                     </td>
-
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
+
 
 <!-- Sequence -->
 <div class="card">
