--- a/apps/campaigns/templates/campaigns/template_list.html
+++ b/apps/campaigns/templates/campaigns/template_list.html
@@ -130,7 +130,7 @@
             <td class="template-meta">{{ template.separator|default_if_none:"" }}</td>
 
             <!-- Owner -->
-            <td class="template-meta">{{ template.owner.username }}</td>
+            <td class="template-meta">You</td>
 
             <!-- Created -->
             <td class="template-meta">{{ template.created_at|date:"Y-m-d H:i" }}</td>
