Revert "Merge branch 'muyao_publish_plasmide'"
This reverts commit 94cc43544024540b54dbb9786c79499a61b7d570, reversing
changes made to ec08f503205fed10817458fbf532afcffd4a8347.

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -12,10 +12,8 @@
   <li><a href="{% url 'simulations:simu' %}">Campaign Simulation</a></li>
   <li><a href="{% url 'plasmids:plasmid_list' %}">Plasmid List</a></li>
   <li><a href="{% url 'plasmids:search' %}">Browse plasmids</a></li>
-  <li><a href="{% url 'plasmids:collection_list' %}">Plasmid Collections</a></li>
   <li><a href="{% url 'accounts:teams' %}">Teams</a></li>
-  <li><a href="{% url 'correspondences:list' %}">Correspondence Table</a></li>
+  <li><a href="{% url 'correspondences:list' %}">My correspondence Table</a></li>
   <li><a href="{% url 'publications:my_requests'%}">My publication request</a></li>
-  <li><a href="{% url 'publications:cheffe_requests'%}">Team publication requests (cheffe)</a></li>
 </ul>
 {% endblock %}
