Revert "Revert "Merge branch 'muyao_publish_plasmide'""
This reverts commit 8743bd8c82d15d0f771a1599efebaec9cac4a2ca.

--- a/apps/correspondences/templates/correspondences/correspondence_list.html
+++ b/apps/correspondences/templates/correspondences/correspondence_list.html
@@ -1,29 +1,62 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/plasmids.css' %}">
+{% endblock %}
 
 {% block title %}My correspondence Table{% endblock %}
 
 {% block content %}
+{% if request.user.is_authenticated %}
 <h1> My correspondence Table</h1>
-<a href="{% url 'correspondences:create' %}">📤Create New Correspondence Table📤</a>
+<a class="btn" href="{% url 'correspondences:create' %}">Create correspondence</a>
+{% endif %}
+<br><br>
 
 {% if correspondences %}
-<ul>
-  {% for c in correspondences %}
-    <li>
-      <a href="{% url 'correspondences:detail' c.pk %}">{{ c.name }}</a>
+  <p class="text-center">
+        {{ correspondences|length }} correspondences available.
+  </p>
+  <table class="table correspondence-table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Entries Count</th>
+                <th>Visibility</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for c in correspondences %}
+                <tr class="clickable-row" data-href="{% url 'correspondences:detail' c.pk %}">
+                    <td>{{ c.name }}</td>
+                    <td>{{ c.entries.count }}</td>
+                    <td>
+                        {% if c.is_public %}
+                            <span class="badge bg-success">Public</span>
+                        {% else %}
+                            <span class="badge bg-secondary">Private</span>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <a href="{% url 'correspondences:delete' c.id %}">🗑️</a>
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 
-      - Entries: {{ c.entries.count }}
-      {% if c.is_public %}
-        (Public)
-      {% else %}
-        (Private)
-      {% endif %}
-      <a href="{% url 'correspondences:delete' c.id %}">🗑️</a>
-    </li>
-    
-  {% endfor %}
-</ul>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const rows = document.querySelectorAll(".clickable-row");
+            rows.forEach(row => {
+                row.addEventListener("click", function() {
+                    window.location.href = this.dataset.href;
+                });
+            });
+        });
+    </script>
+
 {% else %}
 <p>No correspondences found.</p>
 {% endif %}
