--- a/apps/plasmids/templates/plasmids/plasmid_list.html
+++ b/apps/plasmids/templates/plasmids/plasmid_list.html
@@ -7,7 +7,7 @@
     <h1>Plasmid List</h1>
 
     <a class="btn" href="{% url 'plasmids:search' %}">
-        Search plasmids
+        Advanced Search
     </a>
 </div>
 
@@ -16,13 +16,14 @@
         {{ plasmids|length }} plasmids available.
     </p>
 
-    <div class="card">
-        <table class="plasmid-table with-columns">
+  
+        <table id="plasmidTable" class="plasmid-table with-columns">
             <thead>
                 <tr>
                     <th>Name</th>
                     <th>Length</th>
                     <th>Collection</th>
+                    <th>Visibility </th>
                 </tr>
             </thead>
             <tbody>
@@ -31,8 +32,8 @@
                         data-href="{% url 'plasmids:plasmid_detail' plasmid.id %}">
                         <td>{{ plasmid.name }}</td>
                         <td>{{ plasmid.length }} bp</td>
+                        <td>{{ plasmid.collection.name }}</td>
                         <td>
-                            {{ plasmid.collection.name }}
                             {% if plasmid.collection.is_public %}
                                 <span class="badge bg-success">Public</span>
                             {% else %}
@@ -43,7 +44,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
+ 
 
     <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -60,5 +61,41 @@
         Aucun plasmide trouvé
     </p>
 {% endif %}
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+
+    $('#plasmidTable tbody').on('click', 'tr', function () {
+        const href = this.dataset.href;
+        if (href) {
+            window.location = href;
+        }
+    });
+
+    $('#plasmidTable').DataTable({
+        paging: true,
+        pageLength: 25,
+        lengthChange: false,
+        ordering: true,
+        info: true,
+        searching: true,
+        order: [[0, 'asc']],
+        columnDefs: [
+            { orderable: false, targets: [] }
+        ],
+        language: {
+            search: "",
+            info: "Showing _START_ to _END_ of _TOTAL_ plasmids",
+            infoEmpty: "No plasmids available",
+            zeroRecords: "No matching plasmids found",
+            paginate: {
+                previous: "Previous",
+                next: "Next"
+            }
+        }
+    });
+});
+</script>
+
 
 {% endblock %}
