Solution of publication request when a user belongs to multiple teams

--- a/apps/plasmids/templates/collections/collection_form.html
+++ b/apps/plasmids/templates/collections/collection_form.html
@@ -7,7 +7,7 @@
 {% block title %}Create Collection{% endblock %}
 
 {% block content %}
-<h1>Create a Plasmid Collection</h1>
+<h1>Create New Plasmid Collection</h1>
 
 <br>
 
