--- a/apps/correspondences/templates/correspondences/correspondence_create.html
+++ b/apps/correspondences/templates/correspondences/correspondence_create.html
@@ -1,14 +1,23 @@
 {% extends "core/base.html" %}
 {% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/plasmids.css' %}">
+{% endblock %}
 
 {% block content %}
 
-<h1>New correspondence</h1>
-
+<h1>Create New correspondence</h1>
+<br>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Create</button>
+  <table class="form-table">
+        {{ form.as_table }}
+  </table>
+  <br>
+  <div class="form-actions">
+        <button type="submit" class="btn">
+            Save Correspondence
+        </button>
 </form>
 
 <p><a href="{% url 'correspondences:list' %}">← Back to list</a></p>
