--- a/apps/publications/templates/publications/admin_requests.html
+++ b/apps/publications/templates/publications/admin_requests.html
@@ -18,6 +18,7 @@
           <th>ID</th>
           <th>Requested by</th>
           <th>Target</th>
+          <th>Team</th>
           <th>Status</th>
           <th>Comment</th>
           <th style="width: 460px;">Actions</th>
@@ -45,6 +46,8 @@
               (id={{ pub.target_object_id }})
             </div>
           </td>
+
+          <td>{{pub.team}}</td>
 
           <td>
             {% if pub.status == "PENDING_ADMIN" %}
